--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header__title container">
-      Moonshine.dev
-    </header>
+    <header class="header__title container">Moonshine.dev</header>
     <section class="hero">
       <div class="container">
         <div class="row">
@@ -32,7 +30,7 @@
       <div class="container">
         <div class="row">
           <!-- Card 1 -->
-          <div class="feature card">
+          <div class="feature card ready">
             <div class="feature__icon">
               <img src="icon1.webp" alt="WYSIWYG Editor" />
             </div>
@@ -41,11 +39,15 @@
               Design your UI mockup with our intuitive drag-and-drop What You
               See Is What You Get editor
             </p>
-            <button class="feature__button" href="#">Try Now!</a>
+            <a
+              class="feature__button"
+              href="https://app.moonshine.dev/html5/bin/"
+              >Try Now!</a
+            >
           </div>
 
           <!-- Card 2 -->
-          <div class="feature card">
+          <div class="feature card ready">
             <div class="feature__icon">
               <img src="icon2.webp" alt="Multiplatform" />
             </div>
@@ -54,7 +56,11 @@
               Transform your mockup into an app for HTML5, Windows, Mac, Linux,
               iPhone, Android, and tablets
             </p>
-            <button class="feature__button" href="#">Try Now!</a>
+            <a
+              class="feature__button"
+              href="https://app.moonshine.dev/html5/bin/"
+              >Try Now!</a
+            >
           </div>
 
           <!-- Card 3 -->
@@ -67,7 +73,7 @@
               Set up your NoSQL database with REST API access and a basic web
               interface for testing your data
             </p>
-            <button class="feature__button" href="#">Coming soon!</a>
+            <a class="feature__button" href="#">Coming soon!</a>
           </div>
 
           <!-- Card 4 -->
@@ -80,7 +86,7 @@
               Use our upcoming AI tool to create mockups by simply describing
               your UI form in plain English
             </p>
-            <button class="feature__button" href="#">Coming soon!</a>
+            <a class="feature__button" href="#">Coming soon!</a>
           </div>
         </div>
       </div>
