--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <title>Moonshine.dev - Rapid App Development with Visual Designer & Multi-Platform Support (Windows, Mac, Linux, iOS, Android)</title>
   </head>
   <body>
     <header class="header__title container">Moonshine.dev</header>
