--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <title>Moonshine.dev - Rapid App Development with Visual Designer & Multi-Platform Support (Windows, Mac, Linux, iOS, Android)</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <title>
+      Moonshine.dev - Rapid App Development & Visual Designer for All Platforms
+    </title>
+    <meta
+      name="description"
+      content="Moonshine.dev offers rapid app development with a visual designer supporting Windows, Mac, Linux, iOS, and Android. Start building applications quickly with customizable examples."
+    />
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Moonshine.dev",
+        "url": "https://moonshine.dev",
+        "description": "Rapid app development with visual designer supporting multiple platforms.",
+        "applicationCategory": "DevelopmentTool",
+        "operatingSystem": ["Windows", "Mac", "Linux", "iOS", "Android"],
+        "softwareVersion": "1.0",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        }
+      }
+    </script>
   </head>
   <body>
     <header class="header__title container">Moonshine.dev</header>
@@ -17,12 +40,17 @@
               A fast way to start building applications and databases
             </h1>
             <p class="hero__description">
-              There are plenty of examples to explore and customize. You can use
-              them as a starting point for your project.
+              Explore plenty of examples and customize them to kickstart your
+              project. Our tools support rapid development across multiple
+              platforms, ensuring a seamless experience.
             </p>
           </div>
           <div class="hero__image-wrapper">
-            <img src="hero_image.webp" alt="Hero Image" class="hero__image" />
+            <img
+              src="hero_image.webp"
+              alt="Moonshine.dev application development interface"
+              class="hero__image"
+            />
           </div>
         </div>
       </div>
@@ -33,7 +61,7 @@
           <!-- Card 1 -->
           <div class="feature card ready">
             <div class="feature__icon">
-              <img src="icon1.webp" alt="WYSIWYG Editor" />
+              <img src="icon1.webp" alt="Icon representing WYSIWYG Editor" />
             </div>
             <h3 class="feature__title">WYSIWYG Editor</h3>
             <p class="feature__description">
@@ -50,7 +78,10 @@
           <!-- Card 2 -->
           <div class="feature card ready">
             <div class="feature__icon">
-              <img src="icon2.webp" alt="Multiplatform" />
+              <img
+                src="icon2.webp"
+                alt="Icon representing Multiplatform support"
+              />
             </div>
             <h3 class="feature__title">Multiplatform</h3>
             <p class="feature__description">
@@ -67,7 +98,10 @@
           <!-- Card 3 -->
           <div class="feature card">
             <div class="feature__icon">
-              <img src="icon3.webp" alt="Backend Integration" />
+              <img
+                src="icon3.webp"
+                alt="Icon representing Backend Integration"
+              />
             </div>
             <h3 class="feature__title">Backend Integration</h3>
             <p class="feature__description">
@@ -80,7 +114,7 @@
           <!-- Card 4 -->
           <div class="feature card">
             <div class="feature__icon">
-              <img src="icon4.webp" alt="AI Tooling" />
+              <img src="icon4.webp" alt="Icon representing AI Tooling" />
             </div>
             <h3 class="feature__title">AI Tooling</h3>
             <p class="feature__description">
