--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       name="description"
       content="Moonshine.dev offers rapid app development with a visual designer supporting Windows, Mac, Linux, iOS, and Android. Start building applications quickly with customizable examples."
     />
+    <meta
+      name="keywords"
+      content="app development, visual designer, multiplatform, WYSIWYG editor, Moonshine.dev, Windows app development, Mac app development, Linux app development, iOS app development, Android app development, NoSQL, REST API, AI tooling"
+    />
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
