--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
       <div class="container">
         <div class="row">
           <!-- Card 1 -->
-          <div class="feature card ready">
+          <a
+            class="feature card ready"
+            href="https://app.moonshine.dev/html5/bin/"
+            target="_blank"
+          >
             <div class="feature__icon">
               <img src="icon1.webp" alt="Icon representing WYSIWYG Editor" />
             </div>
@@ -72,15 +76,15 @@
               Design your UI mockup with our intuitive drag-and-drop What You
               See Is What You Get editor
             </p>
-            <a
-              class="feature__button"
-              href="https://app.moonshine.dev/html5/bin/"
-              >Try Now!</a
-            >
-          </div>
+            <span class="feature__button">Try Now!</span>
+          </a>
 
           <!-- Card 2 -->
-          <div class="feature card ready">
+          <a
+            class="feature card ready"
+            href="https://app.moonshine.dev/html5/bin/"
+            target="_blank"
+          >
             <div class="feature__icon">
               <img
                 src="icon2.webp"
@@ -92,12 +96,8 @@
               Transform your mockup into an app for HTML5, Windows, Mac, Linux,
               iPhone, Android, and tablets
             </p>
-            <a
-              class="feature__button"
-              href="https://app.moonshine.dev/html5/bin/"
-              >Try Now!</a
-            >
-          </div>
+            <span class="feature__button">Try Now!</span>
+          </a>
 
           <!-- Card 3 -->
           <div class="feature card">
@@ -112,7 +112,7 @@
               Set up your NoSQL database with REST API access and a basic web
               interface for testing your data
             </p>
-            <a class="feature__button" href="#">Coming soon!</a>
+            <span class="feature__button">Coming soon!</span>
           </div>
 
           <!-- Card 4 -->
@@ -125,7 +125,7 @@
               Use our upcoming AI tool to create mockups by simply describing
               your UI form in plain English
             </p>
-            <a class="feature__button" href="#">Coming soon!</a>
+            <span class="feature__button" href="#">Coming soon!</span>
           </div>
         </div>
       </div>
