--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@
           </div>
 
           <!-- Card 4 -->
-          <div class="feature card">
+          <a
+            class="feature card ready"
+            href="https://app.moonshine.dev/html5/bin/assets/ai/index.html"
+            target="_blank"
+          >
             <div class="feature__icon">
               <img src="icon4.webp" alt="Icon representing AI Tooling" />
             </div>
@@ -125,8 +129,8 @@
               Use our upcoming AI tool to create mockups by simply describing
               your UI form in plain English
             </p>
-            <span class="feature__button" href="#">Coming soon!</span>
-          </div>
+            <span class="feature__button">Try Now!</span>
+          </a>
         </div>
       </div>
     </section>
