--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </script>
   </head>
   <body>
-    <header class="header__title container">Moonshine.dev</header>
-    <section class="hero">
-      <div class="container">
+    <div class="container">
+      <header class="header__title">Moonshine.dev</header>
+      <section class="hero">
         <div class="row">
           <div class="hero__text-wrapper">
             <h1 class="hero__title">
@@ -57,10 +57,8 @@
             />
           </div>
         </div>
-      </div>
-    </section>
-    <section>
-      <div class="container">
+      </section>
+      <section>
         <div class="row">
           <!-- Card 1 -->
           <a
@@ -132,7 +130,27 @@
             <span class="feature__button">Try Now!</span>
           </a>
         </div>
-      </div>
-    </section>
+      </section>
+      <div class="spacer"></div>
+
+      <!-- Knowledge Section -->
+      <section class="knowledge">
+        <div class="container">
+          <h2 class="knowledge__title">Knowledge Center</h2>
+          <p class="knowledge__description">
+            Explore our comprehensive resources to learn more about
+            <em>Moonshine.dev</em> and enhance your app development skills.
+          </p>
+          <div class="knowledge__link-wrapper">
+            <a
+              href="https://moonshine-ide.com/docs/moonshine.dev/ui-development-series"
+              class="knowledge__link"
+            >
+              Master Moonshine.dev
+            </a>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
