--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <!-- Card 1 -->
           <a
             class="feature card ready"
-            href="https://app.moonshine.dev/html5/bin/"
+            href="https://app.moonshine.dev"
             target="_blank"
           >
             <div class="feature__icon">
@@ -80,7 +80,7 @@
           <!-- Card 2 -->
           <a
             class="feature card ready"
-            href="https://app.moonshine.dev/html5/bin/"
+            href="https://app.moonshine.dev"
             target="_blank"
           >
             <div class="feature__icon">
@@ -116,7 +116,7 @@
           <!-- Card 4 -->
           <a
             class="feature card ready"
-            href="https://app.moonshine.dev/html5/bin/assets/ai/index.html"
+            href="https://app.moonshine.devassets/ai/index.html"
             target="_blank"
           >
             <div class="feature__icon">
