Fix AI Tooling link

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <!-- Card 4 -->
           <a
             class="feature card ready"
-            href="https://app.moonshine.devassets/ai/index.html"
+            href="https://app.moonshine.dev/public/file/serve/moonshine-dev-private/assets/ai/index.html"
             target="_blank"
           >
             <div class="feature__icon">
