--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             <div class="feature__icon">
               <img src="icon1.webp" alt="Icon representing WYSIWYG Editor" />
             </div>
-            <h2 class="feature__title">WYSIWYG Editor</h2>
+            <h2 class="feature__title">Canvas Editor</h2>
             <p class="feature__description">
-              Design your UI mockup with our intuitive drag-and-drop What You
-              See Is What You Get editor
+              Design your UI mockup with our intuitive drag-and-drop WYSIWYG
+              (What You See Is What You Get) canvas editor
             </p>
             <span class="feature__button">Try Now!</span>
           </a>
