Add Contact Us button
(References: Moonshine-IDE/moonshine-dev-private#42)

--- a/index.html
+++ b/index.html
@@ -134,21 +134,33 @@
       <div class="spacer"></div>
 
       <!-- Knowledge Section -->
-      <section class="knowledge">
-        <div class="container">
-          <h2 class="knowledge__title">Knowledge Center</h2>
-          <p class="knowledge__description">
-            Explore our comprehensive resources to learn more about
-            <em>Moonshine.dev</em> and enhance your app development skills.
-          </p>
-          <div class="knowledge__link-wrapper">
-            <a
-              href="https://moonshine-ide.com/docs/moonshine.dev/ui-development-series"
-              class="knowledge__link"
-            >
-              Master Moonshine.dev
-            </a>
-          </div>
+      <section class="section">
+        <h2 class="section__title">Knowledge Center</h2>
+        <p class="section__description">
+          Explore our comprehensive resources to learn more about
+          <em>Moonshine.dev</em> and enhance your app development skills.
+        </p>
+        <div class="section__link-wrapper">
+          <a
+            href="https://moonshine-ide.com/docs/moonshine.dev/ui-development-series"
+            class="section__link"
+          >
+            Master Moonshine.dev
+          </a>
+        </div>
+      </section>
+
+      <!-- Get Help Section -->
+      <section class="section">
+        <h2 class="section__title">Get Help</h2>
+        <p class="section__description">
+          Need assistance or have ideas to share? Contact our support team for
+          guidance, feature requests, or to share your thoughts!
+        </p>
+        <div class="section__link-wrapper">
+          <a href="https://moonshine-ide.com/feedback/" class="section__link">
+            Contact Us
+          </a>
         </div>
       </section>
     </div>
