Add version anchors
(References: #1)

--- a/release-notes.html
+++ b/release-notes.html
@@ -42,7 +42,7 @@
           </ul>
         </div>
 
-        <div class="release-notes__version">
+        <div class="release-notes__version" id="1.1.0">
           <h2>Version 1.1.0</h2>
 
           <div class="release-notes__category">
@@ -102,7 +102,7 @@
           </div>
         </div>
 
-        <div class="release-notes__version">
+        <div class="release-notes__version" id="1.0.0">
           <h2>Version 1.0.0</h2>
           <p>Initial release</p>
         </div>
