--- a/release-notes.html
+++ b/release-notes.html
@@ -42,8 +42,10 @@
           </ul>
         </div>
 
-        <div class="release-notes__version" id="1.1.0">
-          <h2>Version 1.1.0</h2>
+        <div class="release-notes__version">
+          <h2>
+            <a href="#1.1.0" id="1.1.0" class="version-anchor">Version 1.1.0</a>
+          </h2>
 
           <div class="release-notes__category">
             <h3>🚀 New Features & Improvements</h3>
@@ -102,8 +104,10 @@
           </div>
         </div>
 
-        <div class="release-notes__version" id="1.0.0">
-          <h2>Version 1.0.0</h2>
+        <div class="release-notes__version">
+          <h2>
+            <a href="#1.0.0" id="1.0.0" class="version-anchor">Version 1.0.0</a>
+          </h2>
           <p>Initial release</p>
         </div>
       </section>
